# f1tenth_auto_blocking

./: .gitignore  README.md  focal_length.py
Raceline-Optimization/: main_globaltraj_f110.py  map_converter.ipynb  plot_racelines.py  sanity_check.ipynb
Raceline-Optimization/.ipynb_checkpoints/: map_converter-checkpoint.ipynb  sanity_check-checkpoint.ipynb
Raceline-Optimization/3 Racelines/: Raceline_middle.csv
Raceline-Optimization/3 Racelines all inside/: Raceline_middleold.csv  Raceline_outside.csv
Raceline-Optimization/3 Racelines all inside new/: Raceline_inside.csv  Raceline_middle_old.csv
Raceline-Optimization/3 Racelines new/: Raceline_inside_old.csv  Raceline_middle_old.csv  Raceline_outside.csv
Raceline-Optimization/maps/: FTMHalle_clean.pgm  FTMHalle_clean.yaml  FTMHalle_own.pgm  FTMHalle_own.yaml  FTM_clean1_ws25.pgm  FTM_clean1_ws25.yaml  FTM_clean2_ws25.pgm  FTM_clean2_ws25.yaml  FTM_clean3.pgm  FTM_clean3.yaml  FTM_clean4.pgm  FTM_clean4.yaml  FTM_clean_middle.pgm  FTM_clean_middle.yaml  FTM_clean_outside.pgm  FTM_clean_outside.yaml  FTM_crop.yaml  FTM_own_ws25.yaml
car_distance_estimator/: setup.py
car_distance_estimator/car_distance_estimator/: __init__.py  car_distance_estimator.py  car_distance_estimator_node.py  distance_publisher_node.py  (+5 more)
lab_ws25/: FTM_own_ws25.pgm  frames.gv  map1_async.yaml  map1_sync.pgm
lab_ws25/src/auto_block_bringup/: package.xml  setup.cfg  setup.py
lab_ws25/src/auto_block_bringup/launch/: bringup_block.py
lab_ws25/src/car_distance_estimator/: README.md  package.xml  setup.cfg  setup.py
lab_ws25/src/car_distance_estimator/car_distance_estimator/: __init__.py  race_tracker.py  race_tracker_node.py  raceline_manager_node.py  test_raceline_manager.py
lab_ws25/src/car_distance_estimator/config/: calibration_data.json  camera_params.yaml  race_tracker_params.yaml
lab_ws25/src/car_distance_estimator/launch/: car_distance_estimator.launch.py  raceline_manager.launch.py
lab_ws25/src/car_distance_estimator/resource/: car_distance_estimator
object_detect/: race_tracker.py
(+109 files in other folders)
