<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_block_bringup</name>
  <version>0.0.0</version>
  <description>Master bringup for F1TENTH localization, control, and management.</description>
  <maintainer email="salma.abass@tum.de">salma</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>particle_filter</exec_depend>
  <exec_depend>pure_pursuit</exec_depend>
  <exec_depend>car_distance_estimator</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
