<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_distance_estimator</name>
  <version>0.0.1</version>
  <description>Multi-method car distance estimation using ZED-2 and YOLO</description>
  <maintainer email="fausto.arroyo.mantero@gmail.com">Fausto</maintainer>
  <license>Apache-2.0</license>

  <author>Fausto</author>
  <author email="fausto.arroyo.mantero@gmail.com">Email</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
